--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
+  "name": "reviewbackend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ReceptiveSolutions/ReviewBackend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "type": "module",
+  "bugs": {
+    "url": "https://github.com/ReceptiveSolutions/ReviewBackend/issues"
+  },
+  "homepage": "https://github.com/ReceptiveSolutions/ReviewBackend#readme",
   "dependencies": {
-    "@prisma/client": "^6.14.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -10,16 +28,9 @@
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10",
-    "prisma": "^6.13.0"
-  },
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
   }
 }
